config/manager/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: kontext
    control-plane: controller-manager
  name: kontext-system
